[package]
name = "vql-macros"
version = "0.1.0"
edition = "2021"
description = "Macros for the vql crate."
license = "MIT"
repository = "https://github.com/mrvillage/vql"
documentation = "https://docs.rs/vql"
readme = "../README.md"


[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
paste = "1.0"

[dependencies.vql-utils]
version = "0.1.0"
path = "../vql-utils"

[dependencies.syn]
version = "2.0"
features = ["derive", "parsing"]
